--- a/css/style.css
+++ b/css/style.css
@@ -213,12 +213,19 @@ h1, h2, h3, h4, h5, h6 {
 /*________header-floor_______*/
 
 .header-floor {
-    /* background: url(../img/background/substrate.png) no-repeat 0 0/cover #046FB7; */
     background: url(../img/background/left.png) 0 0/contain no-repeat, url(../img/background/right.png) right bottom no-repeat, #046FB7;
 }
 
 .header-floor__back {
+    min-height: 407px;
+    background: url(../img/content/woman_smoke_figures.png) top right no-repeat;
     position: relative;
+}
+
+@media (max-width: 991px) {
+    .header-floor__back {
+        background:none
+    }
 }
 
 .header-floor__back::after {
@@ -235,7 +242,7 @@ h1, h2, h3, h4, h5, h6 {
 @media (max-width: 350px) {
     .header-floor__back::after {
         border-radius: 0 0 0 46px;
-        top: -225px
+        top: -226px
     }
 }
 
@@ -246,17 +253,6 @@ h1, h2, h3, h4, h5, h6 {
     top: -110px;
 }
 
-/* @media (max-width: 577px) {
-    .header-floor__back::before {
-        content: '';
-        width: 60px;
-        height: 60px;
-        background: #74DBEE;
-        border-radius: 0 0 60px 0;
-        top: -110px;
-    }
-} */
-
 @media (max-width: 575px) {
     .header-floor__back::before {
         content: '';
@@ -264,158 +260,47 @@ h1, h2, h3, h4, h5, h6 {
         height: 60px;
         background: #74DBEE;
         border-radius: 0 0 60px 0;
-        top: -225px;
+        top: -226px;
     }
 }
-
-/* @media (max-width: 560px) {
-    .header-floor__back::before {
-        top: -225px;
-    }
-} */
-
-/* .header-floor__back {
-    min-height: 407px;
-    background: url(../img/background/app.png) no-repeat right top;
-    position: relative;
-}
-
-@media (max-width: 843px) {
-    .header-floor__back {
-        background: url(../img/background/app.png) no-repeat 0 0/cover
-    }
-} */
 
 .header-floor__text-1 {
-    max-width: 710px;
     font-family: 'Avenir Next', sans-serif;
     font-weight: 400;
     text-transform: uppercase;
     font-size: 16px;
     line-height: 1.9em;
     color: #FFFFFF;
-    padding-top: 27px;
-    margin-right: 460px;
-}
-
-@media (max-width: 479px) {
-    .header-floor__text-1 {
-        font-size: 13px;
-    }
 }
 
 .header-floor__text-2 {
-    max-width: 710px;
     font-family: 'Avenir Next', sans-serif;
     font-weight: 500;
     font-size: 24px;
     line-height: 1.6em;
     color: #FFFFFF;
-    margin-right: 500px;
-}
-
-@media (max-width: 843px) {
-    .header-floor__text-2 {
-        margin-right: 0;
-        text-align: center;
-        max-width: none;
-    }
-}
-
-@media (max-width: 479px) {
-    .header-floor__text-2 {
-        font-size: 17px;
-    }
 }
 
 .header-floor__text-3 {
-    max-width: 710px;
     font-family: 'Avenir Next', sans-serif;
     font-style: normal;
     font-weight: 400;
     font-size: 16px;
     line-height: 140%;
     color: #FFFFFF;
-    margin: 25px 500px 32px 0;
-}
-
-@media (max-width: 843px) {
-    .header-floor__text-3 {
-        margin-right: 0;
-        text-align: center;
-        max-width: none;
-        padding: 0 20px;
-    }
-}
-
-@media (max-width: 479px) {
-    .header-floor__text-3 {
-        font-size: 13px;
-    }
 }
 
 .header-floor__text-3 span {
     font-weight: 600;
 }
 
-.header-floor__bottom {
-    display: flex;
-    align-items: center;
-}
-
-@media (max-width: 843px) {
-    .header-floor__bottom {
-        flex-direction: column;
-    }
-}
-
-@media (max-width: 620px) {
-    .header-floor__bottom {
-        flex-direction: column;
-    }
-}
-
-.header-floor__marks-flex {
-    display: flex;
-}
-
-@media (max-width: 620px) {
-    .header-floor__marks-flex {
-        flex-direction: column;
-    }
-}
-
-.header-floor__marks {
-    display: flex;
-    margin: 0 0 20px 0;
-}
-
 .mark-1 {
     min-width: 89px;
-    height: 85px;
+    max-width: 89px;
+    min-height: 85px;
+    max-height: 85px;
     background: #00A87C;
     border-radius: 58px 0 58px 58px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.header-floor__marks-title-1 {
-    margin: 0 45px 0 15px;
-}
-
-.header-floor__marks-title-2 {
-    margin: 0 15px 0 15px;
-    max-width: 300px;
-    min-width: 300px;
-}
-
-@media (max-width: 843px) {
-    .header-floor__marks-title-2 {
-        margin: 0 0 0 15px;
-        max-width: 300px;
-        min-width: 100px;
-    }
 }
 
 .header-floor__marks-text-1 {
@@ -428,12 +313,6 @@ h1, h2, h3, h4, h5, h6 {
     color: #FFFFFF;
 }
 
-@media (max-width: 479px) {
-    .header-floor__marks-text-1 {
-        font-size: 16px;
-    }
-}
-
 .header-floor__marks-text-2 {
     font-family: 'Avenir Next', sans-serif;
     font-style: normal;
@@ -443,43 +322,37 @@ h1, h2, h3, h4, h5, h6 {
     color: #FFFFFF;
 }
 
-@media (max-width: 479px) {
-    .header-floor__marks-text-2 {
-        font-size: 14px;
-    }
-}
-
 .header-floor__btm {
     min-width: 165px;
-    height: 44px;
+    min-height: 44px;
     background: #FF5F79;
     font-family: 'Avenir Next', sans-serif;
     font-style: normal;
     font-weight: 600;
     font-size: 14px;
     line-height: 17px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    letter-spacing: 0.03em;
     color: #FFFFFF;
     box-shadow: inset 0 6px 6px rgba(0, 0, 0, 0.25);
-    margin: 0 0 20px 0;
 }
 
-@media (max-width: 843px) {
-    .header-floor__btm {
-        max-width: 450px;
-        height: 44px;
-    }
+.header-floor__btm div {
+    margin-left: 10px;
+    position: relative;
 }
 
-.header-floor__btm span {
-    margin-left: 5px;
+.header-floor__btm div::before {
+    content: url(../img/icon/svg/head_1_arrow.svg);
+    position: absolute;
+    left: -15px;
+    top: -2px;
 }
 
 .header-floor__btm:hover {
     box-shadow: 3px 3px 3px 3px rgba(0, 0, 0, 0.2);
+}
+
+.header-floor__img img {
+    width: 100%;
 }
 
 /*__________section-1___________*/
